--- a/src/test/resources/volumes.yml
+++ b/src/test/resources/volumes.yml
@@ -2,5 +2,6 @@ testservice:
   image: testservice:0.0.1
   volumes:
     - ./data:/data
+    - ./data:/data:ro
     - /absolute/path/1
     - /absolute/path/2:/mounted/elsewhere
